# IA-Local-Agente

./: README.md  config.example.yaml  pyproject.toml
antigravity/: __init__.py  cli.py  config.py  orchestrator.py
antigravity/llm/: __init__.py  client.py  context.py
antigravity/tools/: __init__.py  filesystem.py  navigator.py  registry.py  shell.py
